--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro" rel="stylesheet">
   <script src="https://use.fontawesome.com/21515b4647.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="/khnStyle.css">
+  <link rel="stylesheet" href="/public/khnStyle.css">
 </head>
 <body class="kihwannet">
 
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.0/pixi.min.js"></script>
-<script src="/bundle.js"></script>
+<script src="/public/bundle.js"></script>
 </html>
